data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1548.wast
;; 9. **Test Description**: Construct a `loop` that incorporates recurrent `if` conditions directly altering control flow states via `reinterpret` instructions within `then` and `else` blocks.    **Constraint Checked**: Validates the interaction between conditional control flow and type re-interpretation instructions.    **Relation to Infinite Loops**: Mismanaged control flow could lead to conditions that re-enter the loop without termination.

(assert_invalid
  (module (func $test-loop-if-reinterpret
    (loop $top
      i32.const 1
      if (then
        i64.const 1
        f64.reinterpret_i64
      ) else (
        i64.const 2
        f32.reinterpret_i64
      )
      br $top
    )
  ))
  "type mismatch"
)